Moved the alpha and beta functions inside of Agent1 and Agent2 in the file agents_for_testing.py, now need to work through the test failures.

--- a/Mean_Field_Library_tests.ipynb
+++ b/Mean_Field_Library_tests.ipynb
@@ -241,48 +241,56 @@
     "        p_mf = qp_vec[2*state_dim:]\n",
     "\n",
     "        def Beta_j(self, q_mf, p_mf, u_mf, u_s, q_s_dot, q_mf_dot, p_mf_dot, q_s, p_l, j):\n",
-    "            Beta_mf=[]\n",
-    "            Beta_l=[]\n",
+    "            Beta_mf_j=np.array([])\n",
+    "            Beta_l_j=np.array([])\n",
     "            H_mf_u = self.H_MF_u(q_mf, p_mf)\n",
     "            H_l_u = self.H_l_u(q_s, p_l)\n",
-    "            lambda_l=0\n",
+    "            lambda_l = 0\n",
     "            j=j-1 # indices start at 0 but control indices start at 1\n",
     "            for k in range(len(self.control_indices)):\n",
+    "                # recall self.q_rhs_H_mf_u() returns a 2D np.array of size control_dim x state_dim, so self.q_rhs_H_mf_u()[k] is actually a 1D np.array\n",
     "                Beta_mf_k = H_mf_u[j]*(np.dot(self.q_rhs_H_mf_u(p_mf, q_mf, u_mf)[k], q_s_dot) + np.dot(self.p_rhs_H_mf_u(p_mf, q_mf, u_mf)[k], p_mf_dot)) + \\\n",
     "                            H_mf_u[k]*(np.dot(self.q_rhs_H_mf_u(p_mf, q_mf, u_mf)[j], q_s_dot) + np.dot(self.p_rhs_H_mf_u(p_mf, q_mf, u_mf)[j], p_mf_dot))\n",
     "                Beta_l_k = H_l_u[j]*(np.dot(self.q_rhs_H_l_u(q_s, p_l)[k], q_s_dot) + np.dot(self.p_rhs_H_l_u(q_s, p_l)[k], p_mf_dot)) + \\\n",
     "                           H_l_u[k]*(np.dot(self.q_rhs_H_l_u(q_s, p_l)[j], q_s_dot) + np.dot(self.p_rhs_H_l_u(q_s, p_l)[j], p_mf_dot))\n",
-    "                    \n",
-    "                Beta_mf.append(Beta_mf_k)\n",
-    "                Beta_l.append(Beta_l_k)\n",
-    "            return Beta_mf, Beta_l\n",
+    "\n",
+    "                Beta_mf_j=np.concatenate([Beta_mf_j, np.array([Beta_mf_k])])\n",
+    "                Beta_l_j=np.concatenate([Beta_l_j, np.array([Beta_l_k])])\n",
+    "\n",
+    "            return Beta_mf_j, Beta_l_j\n",
+    "\n",
     "                \n",
     "        def alpha_j(self, q_mf, p_mf, u_mf, u_s, q_s_dot, q_mf_dot, p_mf_dot, q_s, p_l, H_l_D, j):\n",
-    "            alpha_mf = []\n",
-    "            alpha_l = []\n",
     "            H_mf_u = self.H_MF_u(q_mf, p_mf)\n",
     "            H_l_u = self.H_l_u(q_s, p_l)\n",
     "            j=j-1\n",
     "            H_mf_nou = self.H_MF_nou(q_mf, p_mf, u_mf)\n",
     "            H_l_nou = self.H_l_nou(q_mf, p_mf, u_mf)\n",
-    "            lambda_l = 0\n",
-    "            for k in range(len(self.control_indices)):\n",
-    "                alpha_mf_k = H_mf_u[j]*(np.dot(self.q_rhs_H_mf_nou(p_mf, q_mf, u_mf), q_s_dot) + np.dot(self.p_rhs_H_mf_nou(p_mf, q_mf, u_mf), p_mf_dot)) +\\\n",
+    "            lambda_l=0\n",
+    "            alpha_mf_j = H_mf_u[j]*(np.dot(self.q_rhs_H_mf_nou(p_mf, q_mf), q_s_dot) + np.dot(self.p_rhs_H_mf_nou(p_mf, q_mf), p_mf_dot)) +\\\n",
     "                            (H_mf_nou-H_l_D)*(np.dot(self.q_rhs_H_mf_u(p_mf, q_mf, u_mf)[j], q_s_dot) + np.dot(self.p_rhs_H_mf_u(p_mf, q_mf, u_mf)[j], p_mf_dot))\n",
     "\n",
-    "                alpha_l_k = H_l_u[j]*(np.dot(self.q_rhs_H_l_nou(q_s, p_l, lambda_l)[k], q_s_dot) + np.dot(self.p_rhs_H_l_nou(q_s, p_l)[k], p_l_dot)) +\\\n",
+    "            alpha_l_j = H_l_u[j]*(np.dot(self.q_rhs_H_l_nou(q_s, p_l, lambda_l), q_s_dot) + np.dot(self.p_rhs_H_l_nou(q_s, p_l, lambda_l), p_l_dot)) +\\\n",
     "                            (H_l_nou-H_l_D)*(np.dot(self.q_rhs_H_l_u(q_s, p_l)[j], q_s_dot) + np.dot(self.p_rhs_H_l_u(q_s, p_l)[j], p_l_dot))\n",
-    "                alpha_mf.append(alpha_mf_k)\n",
-    "                alpha_l.append(alpha_l_k)\n",
-    "            return alpha_mf, alpha_l\n",
-    "                \n",
+    "\n",
+    "            return alpha_mf_j, alpha_l_j\n",
+    "        \n",
+    "        u_s_dot = np.array([])\n",
     "        for j in self.control_indices:\n",
-    "            Beta_mf, Beta_l = Beta_j(self, q_mf, p_mf, u_mf, u_s, q_s_dot, q_mf_dot, p_mf_dot, q_s, p_l, j)\n",
-    "            alpha_mf, alpha_l = alpha_j(self, q_mf, p_mf, u_mf, u_s, q_s_dot, q_mf_dot, p_mf_dot, q_s, p_l, H_l_D, j)\n",
-    "\n",
-    "\n",
-    "        return -1*self.Gamma*(self.gamma*(alpha_mf + np.dot(Beta_mf,u_s)) +\\\n",
-    "                              (1-self.gamma)*(alpha_l + np.dot(Beta_l,u_s)))\n",
+    "            '''for each control, we need to:\n",
+    "                1) Compute and get a 1D np.array for each of alpha_l_j, etc.\n",
+    "                2) Compute u_s_dot_j = -1*self.Gamma*(self.gamma*(alpha_mf_j + np.dot(Beta_mf_j, u_s)) + (1-self.gamma)*(alpha_l_j + np.dot(Beta_l_j,u_s)))\n",
+    "                3) Concatenate all of the u_s_dot_j to construct u_s_dot in a 1D np.array\n",
+    "            '''\n",
+    "            \n",
+    "            Beta_mf_j, Beta_l_j = Beta_j(self, q_mf, p_mf, u_mf, u_s, q_s_dot, q_mf_dot, p_mf_dot, q_s, p_l, j)\n",
+    "            alpha_mf_j, alpha_l_j = alpha_j(self, q_mf, p_mf, u_mf, u_s, q_s_dot, q_mf_dot, p_mf_dot, q_s, p_l, H_l_D, j)\n",
+    "            # Beta_mf_j, Beta_l_j should be vectors\n",
+    "            # alpha_mf_j, alpha_l_j should be scalars\n",
+    "            u_s_dot_j = -1*self.Gamma*(self.gamma*(alpha_mf_j + np.dot(Beta_mf_j, u_s)) + (1-self.gamma)*(alpha_l_j + np.dot(Beta_l_j,u_s)))\n",
+    "            u_s_dot=np.concatenate([u_s_dot, np.array([u_s_dot_j])])\n",
+    "        \n",
+    "        return u_s_dot\n",
     "    \n",
     "    ## Mean Field methods\n",
     "    def H_MF_nou(self, q_mf, p_mf, u_mf):\n",
@@ -544,16 +552,11 @@
     "        p_l = qp_vec[state_dim:2*state_dim]\n",
     "        p_mf = qp_vec[2*state_dim:]\n",
     "\n",
-    "        Beta_mfs =[]\n",
-    "        Beta_ls=[]\n",
-    "        alpha_mfs=[]\n",
-    "        alpha_ls=[]\n",
-    "\n",
     "        def Beta_j(self, q_mf, p_mf, u_mf, u_s, q_s_dot, q_mf_dot, p_mf_dot, q_s, p_l, j):\n",
     "            Beta_mf_j=np.array([])\n",
     "            Beta_l_j=np.array([])\n",
-    "            H_mf_u = np.array([0]) # self.H_MF_u(q_mf, p_mf)\n",
-    "            H_l_u = np.array([0]) # self.H_l_u(q_s, p_l)\n",
+    "            H_mf_u = self.H_MF_u(q_mf, p_mf)\n",
+    "            H_l_u = self.H_l_u(q_s, p_l)\n",
     "            lambda_l = 0\n",
     "            j=j-1 # indices start at 0 but control indices start at 1\n",
     "            for k in range(len(self.control_indices)):\n",
@@ -566,13 +569,10 @@
     "                Beta_mf_j=np.concatenate([Beta_mf_j, np.array([Beta_mf_k])])\n",
     "                Beta_l_j=np.concatenate([Beta_l_j, np.array([Beta_l_k])])\n",
     "\n",
-    "            #TODO: should Beta_mf_j be an array? for when we take the dot product?\n",
     "            return Beta_mf_j, Beta_l_j\n",
     "\n",
     "                \n",
     "        def alpha_j(self, q_mf, p_mf, u_mf, u_s, q_s_dot, q_mf_dot, p_mf_dot, q_s, p_l, H_l_D, j):\n",
-    "            alpha_mf = []\n",
-    "            alpha_l = []\n",
     "            H_mf_u = self.H_MF_u(q_mf, p_mf)\n",
     "            H_l_u = self.H_l_u(q_s, p_l)\n",
     "            j=j-1\n",
@@ -603,7 +603,6 @@
     "            u_s_dot=np.concatenate([u_s_dot, np.array([u_s_dot_j])])\n",
     "        \n",
     "        return u_s_dot\n",
-    "\n",
     "\n",
     "    ## Mean Field methods\n",
     "    def H_MF_nou(self, q_mf, p_mf, u_mf):\n",
@@ -1044,8 +1043,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/ipykernel/__main__.py:274: RuntimeWarning: overflow encountered in multiply\n",
-      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/ipykernel/__main__.py:257: RuntimeWarning: overflow encountered in multiply\n",
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/ipykernel/__main__.py:273: RuntimeWarning: overflow encountered in multiply\n",
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/ipykernel/__main__.py:256: RuntimeWarning: overflow encountered in multiply\n",
       "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/ipykernel/__main__.py:95: RuntimeWarning: overflow encountered in multiply\n",
       "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/ipykernel/__main__.py:74: RuntimeWarning: overflow encountered in multiply\n",
       "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/ipykernel/__main__.py:153: RuntimeWarning: invalid value encountered in multiply\n",
