Removed orphaned code in agents_for_testing.py for alphas and Betas. Then, started writing a test for control_dim=2. Find the methods that must be changed if the control_dim changes: -	change dimension of Agent2 -	then see what breaks by running the tests

--- a/Mean_Field_Library_tests.ipynb
+++ b/Mean_Field_Library_tests.ipynb
@@ -65,13 +65,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "class Agent:\n",
+    "class Agent(object):\n",
     "    \n",
     "    def __init__(self, blackboard, state_indices, control_indices):\n",
     "        '''\n",
@@ -226,70 +226,40 @@
     "        p_rhs_H_l = self.p_rhs_H_l_nou(q_s, p_l, lambda_l) + sum([self.p_rhs_H_l_u(q_s, p_l)*u_s_i for u_s_i in u_s])\n",
     "        return np.concatenate([q_rhs_H_l, p_rhs_H_l])\n",
     "\n",
+    "\n",
     "    def u_rhs(self, t, u_vec, **kwargs):\n",
     "        u_s = kwargs['u_0']\n",
     "        state_dim = kwargs['state_dim']\n",
     "        q_mf_dot = kwargs['q_mf_dot']\n",
     "        q_s_dot = kwargs['q_s_dot']\n",
+    "        p_l_dot = kwargs['p_l_dot']\n",
     "        p_mf_dot = kwargs['p_mf_dot']\n",
     "        q_mf = kwargs['q_mf']\n",
     "        u_mf = kwargs['u_mf']\n",
     "        qp_vec = kwargs['qp_vec']\n",
     "        H_l_D = kwargs['H_l_D']\n",
+    "        Beta_mf = kwargs['Beta_mf']\n",
+    "        Beta_l = kwargs['Beta_l']\n",
+    "        alpha_mf = kwargs['alpha_mf']\n",
+    "        alpha_l = kwargs['alpha_l']\n",
     "        q_s = qp_vec[:state_dim]\n",
     "        p_l = qp_vec[state_dim:2*state_dim]\n",
     "        p_mf = qp_vec[2*state_dim:]\n",
-    "\n",
-    "        def Beta_j(self, q_mf, p_mf, u_mf, u_s, q_s_dot, q_mf_dot, p_mf_dot, q_s, p_l, j):\n",
-    "            Beta_mf_j=np.array([])\n",
-    "            Beta_l_j=np.array([])\n",
-    "            H_mf_u = self.H_MF_u(q_mf, p_mf)\n",
-    "            H_l_u = self.H_l_u(q_s, p_l)\n",
-    "            lambda_l = 0\n",
-    "            j=j-1 # indices start at 0 but control indices start at 1\n",
-    "            for k in range(len(self.control_indices)):\n",
-    "                # recall self.q_rhs_H_mf_u() returns a 2D np.array of size control_dim x state_dim, so self.q_rhs_H_mf_u()[k] is actually a 1D np.array\n",
-    "                Beta_mf_k = H_mf_u[j]*(np.dot(self.q_rhs_H_mf_u(p_mf, q_mf, u_mf)[k], q_s_dot) + np.dot(self.p_rhs_H_mf_u(p_mf, q_mf, u_mf)[k], p_mf_dot)) + \\\n",
-    "                            H_mf_u[k]*(np.dot(self.q_rhs_H_mf_u(p_mf, q_mf, u_mf)[j], q_s_dot) + np.dot(self.p_rhs_H_mf_u(p_mf, q_mf, u_mf)[j], p_mf_dot))\n",
-    "                Beta_l_k = H_l_u[j]*(np.dot(self.q_rhs_H_l_u(q_s, p_l)[k], q_s_dot) + np.dot(self.p_rhs_H_l_u(q_s, p_l)[k], p_mf_dot)) + \\\n",
-    "                           H_l_u[k]*(np.dot(self.q_rhs_H_l_u(q_s, p_l)[j], q_s_dot) + np.dot(self.p_rhs_H_l_u(q_s, p_l)[j], p_mf_dot))\n",
-    "\n",
-    "                Beta_mf_j=np.concatenate([Beta_mf_j, np.array([Beta_mf_k])])\n",
-    "                Beta_l_j=np.concatenate([Beta_l_j, np.array([Beta_l_k])])\n",
-    "\n",
-    "            return Beta_mf_j, Beta_l_j\n",
-    "\n",
-    "                \n",
-    "        def alpha_j(self, q_mf, p_mf, u_mf, u_s, q_s_dot, q_mf_dot, p_mf_dot, q_s, p_l, H_l_D, j):\n",
-    "            H_mf_u = self.H_MF_u(q_mf, p_mf)\n",
-    "            H_l_u = self.H_l_u(q_s, p_l)\n",
-    "            j=j-1\n",
-    "            H_mf_nou = self.H_MF_nou(q_mf, p_mf, u_mf)\n",
-    "            H_l_nou = self.H_l_nou(q_mf, p_mf, u_mf)\n",
-    "            lambda_l=0\n",
-    "            alpha_mf_j = H_mf_u[j]*(np.dot(self.q_rhs_H_mf_nou(p_mf, q_mf), q_s_dot) + np.dot(self.p_rhs_H_mf_nou(p_mf, q_mf), p_mf_dot)) +\\\n",
-    "                            (H_mf_nou-H_l_D)*(np.dot(self.q_rhs_H_mf_u(p_mf, q_mf, u_mf)[j], q_s_dot) + np.dot(self.p_rhs_H_mf_u(p_mf, q_mf, u_mf)[j], p_mf_dot))\n",
-    "\n",
-    "            alpha_l_j = H_l_u[j]*(np.dot(self.q_rhs_H_l_nou(q_s, p_l, lambda_l), q_s_dot) + np.dot(self.p_rhs_H_l_nou(q_s, p_l, lambda_l), p_l_dot)) +\\\n",
-    "                            (H_l_nou-H_l_D)*(np.dot(self.q_rhs_H_l_u(q_s, p_l)[j], q_s_dot) + np.dot(self.p_rhs_H_l_u(q_s, p_l)[j], p_l_dot))\n",
-    "\n",
-    "            return alpha_mf_j, alpha_l_j\n",
-    "        \n",
     "        u_s_dot = np.array([])\n",
-    "        for j in self.control_indices:\n",
+    "        for j in range(self.control_dim):\n",
     "            '''for each control, we need to:\n",
     "                1) Compute and get a 1D np.array for each of alpha_l_j, etc.\n",
     "                2) Compute u_s_dot_j = -1*self.Gamma*(self.gamma*(alpha_mf_j + np.dot(Beta_mf_j, u_s)) + (1-self.gamma)*(alpha_l_j + np.dot(Beta_l_j,u_s)))\n",
     "                3) Concatenate all of the u_s_dot_j to construct u_s_dot in a 1D np.array\n",
     "            '''\n",
-    "            \n",
-    "            Beta_mf_j, Beta_l_j = Beta_j(self, q_mf, p_mf, u_mf, u_s, q_s_dot, q_mf_dot, p_mf_dot, q_s, p_l, j)\n",
-    "            alpha_mf_j, alpha_l_j = alpha_j(self, q_mf, p_mf, u_mf, u_s, q_s_dot, q_mf_dot, p_mf_dot, q_s, p_l, H_l_D, j)\n",
+    "    \n",
+    "            Beta_mf_j,Beta_l_j = Beta_mf[j], Beta_l[j]\n",
+    "            alpha_mf_j, alpha_l_j = alpha_mf[j], alpha_l[j]\n",
     "            # Beta_mf_j, Beta_l_j should be vectors\n",
     "            # alpha_mf_j, alpha_l_j should be scalars\n",
     "            u_s_dot_j = -1*self.Gamma*(self.gamma*(alpha_mf_j + np.dot(Beta_mf_j, u_s)) + (1-self.gamma)*(alpha_l_j + np.dot(Beta_l_j,u_s)))\n",
     "            u_s_dot=np.concatenate([u_s_dot, np.array([u_s_dot_j])])\n",
-    "        \n",
+    "    \n",
     "        return u_s_dot\n",
     "    \n",
     "    ## Mean Field methods\n",
@@ -326,7 +296,7 @@
     "        return self.q_rhs_H_mf_nou(q_mf, p_mf) + q_rhs_H_mf_u_summed\n",
     "        \n",
     "    def q_rhs_H_mf_u(self, q_mf, p_mf, u_mf):\n",
-    "        # should return something of dimension \n",
+    "        # should return something of 2 dimensions: first dimension is number of controls, and inner dimension is state_dim\n",
     "        p_H_mf_u_dot_1 =  p_mf # or something\n",
     "        return np.array([p_H_mf_u_dot_1])\n",
     "    \n",
@@ -374,13 +344,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "class Agent2:\n",
+    "class Agent2(object):\n",
     "    \n",
     "    def __init__(self, blackboard, state_indices, control_indices):\n",
     "        '''\n",
@@ -538,70 +508,40 @@
     "\n",
     "        return np.concatenate([q_s_dot, p_l_dot, p_mf_dot])\n",
     "    \n",
+    "\n",
     "    def u_rhs(self, t, u_vec, **kwargs):\n",
     "        u_s = kwargs['u_0']\n",
     "        state_dim = kwargs['state_dim']\n",
     "        q_mf_dot = kwargs['q_mf_dot']\n",
     "        q_s_dot = kwargs['q_s_dot']\n",
+    "        p_l_dot = kwargs['p_l_dot']\n",
     "        p_mf_dot = kwargs['p_mf_dot']\n",
     "        q_mf = kwargs['q_mf']\n",
     "        u_mf = kwargs['u_mf']\n",
     "        qp_vec = kwargs['qp_vec']\n",
     "        H_l_D = kwargs['H_l_D']\n",
+    "        Beta_mf = kwargs['Beta_mf']\n",
+    "        Beta_l = kwargs['Beta_l']\n",
+    "        alpha_mf = kwargs['alpha_mf']\n",
+    "        alpha_l = kwargs['alpha_l']\n",
     "        q_s = qp_vec[:state_dim]\n",
     "        p_l = qp_vec[state_dim:2*state_dim]\n",
     "        p_mf = qp_vec[2*state_dim:]\n",
-    "\n",
-    "        def Beta_j(self, q_mf, p_mf, u_mf, u_s, q_s_dot, q_mf_dot, p_mf_dot, q_s, p_l, j):\n",
-    "            Beta_mf_j=np.array([])\n",
-    "            Beta_l_j=np.array([])\n",
-    "            H_mf_u = self.H_MF_u(q_mf, p_mf)\n",
-    "            H_l_u = self.H_l_u(q_s, p_l)\n",
-    "            lambda_l = 0\n",
-    "            j=j-1 # indices start at 0 but control indices start at 1\n",
-    "            for k in range(len(self.control_indices)):\n",
-    "                # recall self.q_rhs_H_mf_u() returns a 2D np.array of size control_dim x state_dim, so self.q_rhs_H_mf_u()[k] is actually a 1D np.array\n",
-    "                Beta_mf_k = H_mf_u[j]*(np.dot(self.q_rhs_H_mf_u(p_mf, q_mf, u_mf)[k], q_s_dot) + np.dot(self.p_rhs_H_mf_u(p_mf, q_mf, u_mf)[k], p_mf_dot)) + \\\n",
-    "                            H_mf_u[k]*(np.dot(self.q_rhs_H_mf_u(p_mf, q_mf, u_mf)[j], q_s_dot) + np.dot(self.p_rhs_H_mf_u(p_mf, q_mf, u_mf)[j], p_mf_dot))\n",
-    "                Beta_l_k = H_l_u[j]*(np.dot(self.q_rhs_H_l_u(q_s, p_l)[k], q_s_dot) + np.dot(self.p_rhs_H_l_u(q_s, p_l)[k], p_mf_dot)) + \\\n",
-    "                           H_l_u[k]*(np.dot(self.q_rhs_H_l_u(q_s, p_l)[j], q_s_dot) + np.dot(self.p_rhs_H_l_u(q_s, p_l)[j], p_mf_dot))\n",
-    "\n",
-    "                Beta_mf_j=np.concatenate([Beta_mf_j, np.array([Beta_mf_k])])\n",
-    "                Beta_l_j=np.concatenate([Beta_l_j, np.array([Beta_l_k])])\n",
-    "\n",
-    "            return Beta_mf_j, Beta_l_j\n",
-    "\n",
-    "                \n",
-    "        def alpha_j(self, q_mf, p_mf, u_mf, u_s, q_s_dot, q_mf_dot, p_mf_dot, q_s, p_l, H_l_D, j):\n",
-    "            H_mf_u = self.H_MF_u(q_mf, p_mf)\n",
-    "            H_l_u = self.H_l_u(q_s, p_l)\n",
-    "            j=j-1\n",
-    "            H_mf_nou = self.H_MF_nou(q_mf, p_mf, u_mf)\n",
-    "            H_l_nou = self.H_l_nou(q_mf, p_mf, u_mf)\n",
-    "            lambda_l=0\n",
-    "            alpha_mf_j = H_mf_u[j]*(np.dot(self.q_rhs_H_mf_nou(p_mf, q_mf), q_s_dot) + np.dot(self.p_rhs_H_mf_nou(p_mf, q_mf), p_mf_dot)) +\\\n",
-    "                            (H_mf_nou-H_l_D)*(np.dot(self.q_rhs_H_mf_u(p_mf, q_mf, u_mf)[j], q_s_dot) + np.dot(self.p_rhs_H_mf_u(p_mf, q_mf, u_mf)[j], p_mf_dot))\n",
-    "\n",
-    "            alpha_l_j = H_l_u[j]*(np.dot(self.q_rhs_H_l_nou(q_s, p_l, lambda_l), q_s_dot) + np.dot(self.p_rhs_H_l_nou(q_s, p_l, lambda_l), p_l_dot)) +\\\n",
-    "                            (H_l_nou-H_l_D)*(np.dot(self.q_rhs_H_l_u(q_s, p_l)[j], q_s_dot) + np.dot(self.p_rhs_H_l_u(q_s, p_l)[j], p_l_dot))\n",
-    "\n",
-    "            return alpha_mf_j, alpha_l_j\n",
-    "        \n",
     "        u_s_dot = np.array([])\n",
-    "        for j in self.control_indices:\n",
+    "        for j in range(self.control_dim):\n",
     "            '''for each control, we need to:\n",
     "                1) Compute and get a 1D np.array for each of alpha_l_j, etc.\n",
     "                2) Compute u_s_dot_j = -1*self.Gamma*(self.gamma*(alpha_mf_j + np.dot(Beta_mf_j, u_s)) + (1-self.gamma)*(alpha_l_j + np.dot(Beta_l_j,u_s)))\n",
     "                3) Concatenate all of the u_s_dot_j to construct u_s_dot in a 1D np.array\n",
     "            '''\n",
-    "            \n",
-    "            Beta_mf_j, Beta_l_j = Beta_j(self, q_mf, p_mf, u_mf, u_s, q_s_dot, q_mf_dot, p_mf_dot, q_s, p_l, j)\n",
-    "            alpha_mf_j, alpha_l_j = alpha_j(self, q_mf, p_mf, u_mf, u_s, q_s_dot, q_mf_dot, p_mf_dot, q_s, p_l, H_l_D, j)\n",
+    "    \n",
+    "            Beta_mf_j,Beta_l_j = Beta_mf[j], Beta_l[j]\n",
+    "            alpha_mf_j, alpha_l_j = alpha_mf[j], alpha_l[j]\n",
     "            # Beta_mf_j, Beta_l_j should be vectors\n",
     "            # alpha_mf_j, alpha_l_j should be scalars\n",
     "            u_s_dot_j = -1*self.Gamma*(self.gamma*(alpha_mf_j + np.dot(Beta_mf_j, u_s)) + (1-self.gamma)*(alpha_l_j + np.dot(Beta_l_j,u_s)))\n",
     "            u_s_dot=np.concatenate([u_s_dot, np.array([u_s_dot_j])])\n",
-    "        \n",
+    "    \n",
     "        return u_s_dot\n",
     "\n",
     "    ## Mean Field methods\n",
@@ -685,6 +625,99 @@
     "\n",
     "        assert np.shape(L_mf_total_q_dot)[0] == self.state_dim, 'dimensions of L_mf_total_q_dot must match those of the local state, currently the dimensions are ' +str(np.shape(L_mf_total_q_dot)[0])\n",
     "        return L_mf_total_q_dot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "class Agent3(Agent2):\n",
+    "    \n",
+    "    '''This class inherits from Agent2, and only overwrites what it needs to in order to increase control dimension to 2'''\n",
+    "    \n",
+    "    def __init__(self, blackboard, state_indices, control_indices):\n",
+    "        self.state_indices = state_indices\n",
+    "        self.control_indices = control_indices\n",
+    "        self.bb = blackboard\n",
+    "\n",
+    "        # Inputs for numerical propagator\n",
+    "        # qp_vec is going to be [q_s, p_l, p_mf], so it will have dimension = 3*state_dim\n",
+    "\n",
+    "        self.q_s_0 = np.array([0,2])\n",
+    "        self.p_l_0 = np.array([0,3])\n",
+    "        self.p_mf_0 = np.array([0,1])\n",
+    "        self.u_s_0 = np.array([0,0])\n",
+    "        self.qpu_vec = np.hstack([self.q_s_0, self.p_l_0, self.p_mf_0, self.u_s_0])\n",
+    "        self.state_dim = len(state_indices)\n",
+    "        self.control_dim = len(control_indices)\n",
+    "        self.Gamma = 1 \n",
+    "        self.gamma = 1 # gets computed each time the agent is visited\n",
+    "        self.q_s_dot = np.array([0,1])  # must have same dimensions as q_s\n",
+    "        self.sync = None # gets Synchronizer class is initialized\n",
+    "        self.name='Agent3'\n",
+    "        \n",
+    "        # Inputs for numerical integration\n",
+    "        self.integrateTol = 10**-5\n",
+    "        self.integrateMaxIter = 400\n",
+    "\n",
+    "        # Inputs for sliding window\n",
+    "        self.t_0 = 0\n",
+    "        self.T = 2\n",
+    "        self.K = 4\n",
+    "\n",
+    "        self.t_terminal = 2\n",
+    "        self.n_s = 2 \n",
+    "\n",
+    "        self.validate_dimensions()\n",
+    "        \n",
+    "    def q_rhs_H_mf_u(self, q_mf, p_mf, u_mf):\n",
+    "        # should return 2D array of outer dimension control_dim, and inner dimension state_dim\n",
+    "        p_H_mf_u_dot_1 =  p_mf # or something\n",
+    "        return np.array([p_H_mf_u_dot_1, p_H_mf_u_dot_2])\n",
+    "    \n",
+    "    def q_rhs_H_mf_u(self, q_mf, p_mf, u_mf):\n",
+    "        p_H_mf_u_dot_1 =  p_mf # or something\n",
+    "        return np.array([p_H_mf_u_dot_1, p_H_mf_u_dot_2])\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "myAgent3=Agent3(bb, [1,2], [1,2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Agent3' object has no attribute 'control_dim'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-60-f6956c2f77aa>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmyAgent3\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcontrol_dim\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Agent3' object has no attribute 'control_dim'"
+     ]
+    }
+   ],
+   "source": [
+    "myAgent3.control_dim"
    ]
   },
   {
